@@ -206,7 +206,7 @@ STR:5
 STRING:StringsStringsStringsStringsStrings
 SUM:45
 SUMSQ:285
-TAB:
+TAB:    HERE
 TAN:-0.27285466095512
 TANH:0.99999999995856
 TEXTHEIGHT:1
